# NifIo

./: .gitignore  Cargo.toml  README.md  mix.exs
.github/workflows/: ci.yml
config/: config.exs
lib/: nif_io.ex
lib/nif_io/: file_handle.ex  native.ex
native/io/: Cargo.toml
native/io/src/: lib.rs
test/: nif_io_test.exs
